# cortex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  TOOLING.md  VISION.md  action.yml  cortex.yml.example  package.json  pnpm-workspace.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  showcase.yml
.github/workflows/: build-examples.yml  ci.yml  health-check.yml  refresh-context.yml
LICENSES/: BRAIN-ANATOMY-CC-BY-SA-3.0.txt
docs/: cortex-v1-development-summary.md
docs/superpowers/plans/: 2026-04-26-brain-activation-pulse.md  2026-04-26-brain-atmosphere-polish.md  2026-04-26-brain-aurora-flow.md  2026-04-26-brain-professional-visuals.md  2026-04-26-brain-rose-body-dna.md  2026-04-26-brain-true-waves.md  2026-04-26-brain-vibrant-lobes.md
docs/superpowers/specs/: 2026-04-26-brain-activation-pulse-design.md  2026-04-26-brain-atmosphere-polish-design.md  2026-04-26-brain-aurora-flow-design.md  2026-04-26-brain-professional-visuals-design.md  2026-04-26-brain-rose-body-dna-design.md  2026-04-26-brain-true-waves-design.md  2026-04-26-brain-vibrant-lobes-design.md
examples/: README.md  extreme.yml  minimal.yml  standard.yml
scripts/: refresh_context.py
