# ════════════════════════════════════════════════════════════════════════
# Root pyproject.toml — shared dev tooling for the Python packages.
#
# The actual published packages each have their own pyproject.toml under
# packages/cortex-{core,cli}/. This root file is for developer ergonomics:
# install once, lint/test/typecheck across all Python packages.
# ════════════════════════════════════════════════════════════════════════

[project]
name            = "cortex-monorepo"
version         = "0.1.0"
description     = "Cortex monorepo — root-level dev tooling only. See packages/ for actual published packages."
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Abdullah Bakir", email = "abdullah.bakir.1997@gmail.com" }]

[tool.uv]                                  # uv-based dev dependency management
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-snapshot>=0.9.0",              # SVG snapshot testing for builders
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "pydantic>=2.6.0",                     # config schema models
    "Jinja2>=3.1.4",                       # SVG templating
    "build>=1.2.0",                        # python -m build (sdist + wheel)
    "twine>=5.0.0",                        # publishing
]

# ── Ruff config (linter + formatter) ────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
extend-exclude = ["packages/*/build", "packages/*/dist", "**/__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort import sorting
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific
]
ignore = ["E501"]                           # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── mypy strict-ish ──────────────────────────────────────────────────────
[tool.mypy]
python_version              = "3.10"
strict                       = true
warn_return_any              = true
warn_unused_ignores          = true
disallow_untyped_defs        = true
disallow_incomplete_defs     = true

# Test files can be looser
[[tool.mypy.overrides]]
module               = "tests.*"
disallow_untyped_defs = false

# ── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths  = ["packages/cortex-core/tests", "packages/cortex-cli/tests"]
addopts    = "-ra -q --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]

# ── Coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
source     = ["packages/cortex-core/cortex", "packages/cortex-cli/cortex_cli"]
omit       = ["**/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
